apps/demo/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-app
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    blueGreen:
      activeService: demo-app-active
      previewService: demo-app-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 30
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: webserver
          image: nginx:1.27-alpine
          command:
            - /bin/sh
          args:
            - -c
            - |
              [...]
          ports:
            - containerPort: 80
              name: http
